--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="sv">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="viewport"
+  content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no" />
   <title>Gym Logger — Pass</title>
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#111827" />
@@ -15,7 +16,17 @@
     .row{display:flex;gap:10px;flex-wrap:wrap}
     .col{flex:1 1 240px}
     label{font-size:12px;color:var(--muted);display:block;margin-bottom:6px}
-    select,input,button{width:100%;padding:12px 14px;border-radius:12px;border:1px solid #243244;background:#000;color:var(--text);font-weight:700}
+    select, input, button {
+  width: 100%;
+  padding: 12px 14px;
+  border-radius: 12px;
+  border: 1px solid #243244;
+  background: #000;
+  color: var(--text);
+  font-weight: 700;
+  font-size: 16px; /* ← stoppar iPhone från att zooma in */
+}
+
     input::placeholder{color:#64748b}
     .btn{background:linear-gradient(180deg,#23c55e,#16a34a);border:none;cursor:pointer}
     .btn.ghost{background:transparent;border:1px solid #334155;font-weight:600}
